--- a/composer.json
+++ b/composer.json
@@ -20,21 +20,21 @@
     "php": "^8.5.0",
     "illuminate/support": "^12.28",
     "laravel/prompts": "^0.3.8",
-    "nikic/php-parser": "^5.6.2",
+    "nikic/php-parser": "^5.7.0",
     "phpdocumentor/reflection-common": "^2.2",
-    "phpdocumentor/reflection-docblock": "^5.6.5",
+    "phpdocumentor/reflection-docblock": "^5.6.6",
     "phpdocumentor/type-resolver": "^1.12.0",
     "symfony/process": "^7.4.0"
   },
   "require-dev": {
-    "cline/coding-standard": "^1.6.2",
+    "cline/coding-standard": "^1.6.3",
     "ergebnis/composer-normalize": "^2.48.2",
-    "orchestra/testbench": "^8.0|^9.0|^10.0",
-    "pestphp/pest": "^4.1.6",
+    "orchestra/testbench": "^8.0 || ^9.0 || ^10.8",
+    "pestphp/pest": "^4.2.0",
     "pestphp/pest-plugin-laravel": "^4.0",
     "pestphp/pest-plugin-type-coverage": "^4.0.3",
     "spatie/laravel-package-tools": "^1.92.7",
-    "symfony/var-dumper": "^6.0|^7.0"
+    "symfony/var-dumper": "^6.0 || ^7.4"
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
